--- a/home-service-full-stack/frontend/src/locales/ru/translation.json
+++ b/home-service-full-stack/frontend/src/locales/ru/translation.json
@@ -132,6 +132,10 @@
     "gallery": "Галерея",
     "similarServices": "Похожие услуги"
   },
+  "errorPage": {
+    "errorMessage": "Упс! Страница, которую вы ищете, не существует.",
+    "backHome": "Вернуться домой"
+  },
   "time": {
     "8AM": "8:00 утра",
     "10AM": "10:00 утра",
