--- a/home-service-full-stack/frontend/src/locales/ru/translation.json
+++ b/home-service-full-stack/frontend/src/locales/ru/translation.json
@@ -4,7 +4,9 @@
     "aboutUs": "О нас",
     "forBusinessPartners": "Для бизнес-партнеров",
     "register": "Регистрация",
-    "password": "Пароль"
+    "password": "Пароль",
+    "loading": "Загрузка, пожалуйста, подождите...",
+    "error": "Что-то пошло не так. Пожалуйста, попробуйте еще раз."
   },
   "topbar": {
     "services": "Услуги"
