some changes with ru translate

--- a/home-service-full-stack/frontend/src/locales/ru/translation.json
+++ b/home-service-full-stack/frontend/src/locales/ru/translation.json
@@ -38,7 +38,7 @@
   },
   "buttons": {
     "bookNow": "Забронировать сейчас",
-    "bookAppointment": "Записаться",
+    "bookAppointment": "Забронировать",
     "reserveTime": "Зарезервировать время",
     "completeTheForm": "Заполните форму",
     "readMore": "Читать далее",
@@ -139,12 +139,12 @@
     "backHome": "Вернуться домой"
   },
   "time": {
-    "8AM": "8:00 утра",
-    "10AM": "10:00 утра",
-    "11AM": "11:00 утра",
-    "1130AM": "11:30 утра",
-    "12PM": "12:00 дня",
-    "1230PM": "12:30 дня",
+    "8AM": "8:00",
+    "10AM": "10:00",
+    "11AM": "11:00",
+    "1130AM": "11:30",
+    "12PM": "12:00",
+    "1230PM": "12:30",
     "2PM": "14:00",
     "6PM": "18:00",
     "7PM": "19:00"
