added a notification with past date error for the booking

--- a/home-service-full-stack/frontend/src/locales/en/translation.json
+++ b/home-service-full-stack/frontend/src/locales/en/translation.json
@@ -57,6 +57,8 @@
     "bookSuccess": "Successfully booked!",
     "bookError": "An error occurred.",
     "bookCancel": "Booking successfully canceled!",
+    "pastDateError": "You can't book a date in the past.",
+    "selectBookingDate": "Please select a date before submitting.",
     "favoritesLoading": "Loading favorites...",
     "favoritesError": "Error loading favorites.",
     "favoritesLogin": "Please log in to view your favorites.",
