--- a/home-service-full-stack/frontend/src/locales/lt/translation.json
+++ b/home-service-full-stack/frontend/src/locales/lt/translation.json
@@ -49,22 +49,24 @@
     "cancel": "Atšaukti"
   },
   "messages": {
-    "emailSendSuccess": "El. laiškas buvo išsiųstas sėkmingai!",
-    "emailSendError": "Įvyko klaida, siunčiant el. laišką.",
+    "emailSendSuccess": "El. laiškas sėkmingai išsiųstas!",
+    "emailSendError": "Įvyko klaida.",
     "copyLinkSuccess": "Paslaugos nuoroda nukopijuota į iškarpinę!",
     "copyLinkError": "Nepavyko nukopijuoti nuorodos. Bandykite dar kartą.",
-    "noImages": "Paveikslėlių nėra.",
-    "bookSuccess": "Paslauga rezervuota sėkmingai!",
-    "bookError": "Įvyko klaida, bandant rezervuoti paslaugą.",
-    "bookCancel": "Rezervacija sėkmingai atšaukta!",
+    "noImages": "Nėra paveikslėlių",
+    "bookSuccess": "Sėkmingai užsakyta!",
+    "bookError": "Įvyko klaida.",
+    "bookCancel": "Užsakymas sėkmingai atšauktas!",
+    "pastDateError": "Negalite pasirinkti datos iš praeities.",
+    "selectBookingDate": "Prašome pasirinkti datą prieš pateikdami.",
     "favoritesLoading": "Įkeliami mėgstamiausi...",
     "favoritesError": "Klaida įkeliant mėgstamiausius.",
-    "favoritesLogin": "Prisijunkite, kad galėtumėte peržiūrėti savo mėgstamiausius.",
-    "favoriteToggleError": "Nepavyko pakeisti mėgstamiausio.",
-    "required": "Laukas būtinas",
-    "validEmail": "El. paštas turi būti teisingo formato",
-    "requiredCategory": "Kategorija yra būtina",
-    "registrationSuccess": "Registracija sėkmingai atlikta!"
+    "favoritesLogin": "Prašome prisijungti, kad peržiūrėtumėte mėgstamiausius.",
+    "favoriteToggleError": "Nepavyko pakeisti mėgstamiausio būsenos.",
+    "required": "Laukas yra privalomas",
+    "validEmail": "El. paštas turi būti teisingas",
+    "requiredCategory": "Kategorija yra privaloma",
+    "registrationSuccess": "Registracija sėkminga!"
   },
   "inputPlaceholder": {
     "search": "Pradėkite rašyti ieškomos paslaugos pavadinimą...",
