--- a/home-service-full-stack/frontend/src/locales/ru/translation.json
+++ b/home-service-full-stack/frontend/src/locales/ru/translation.json
@@ -53,16 +53,18 @@
     "emailSendError": "Произошла ошибка.",
     "copyLinkSuccess": "Ссылка на услугу скопирована в буфер обмена!",
     "copyLinkError": "Не удалось скопировать ссылку. Пожалуйста, попробуйте снова.",
-    "noImages": "Нет доступных изображений",
-    "bookSuccess": "Успешно забронировано!",
+    "noImages": "Изображения отсутствуют",
+    "bookSuccess": "Бронирование успешно!",
     "bookError": "Произошла ошибка.",
     "bookCancel": "Бронирование успешно отменено!",
+    "pastDateError": "Вы не можете забронировать дату в прошлом.",
+    "selectBookingDate": "Пожалуйста, выберите дату перед отправкой.",
     "favoritesLoading": "Загрузка избранного...",
-    "favoritesError": "Ошибка загрузки избранного.",
-    "favoritesLogin": "Пожалуйста, войдите, чтобы просмотреть избранное.",
-    "favoriteToggleError": "Не удалось добавить/удалить из избранного.",
+    "favoritesError": "Ошибка при загрузке избранного.",
+    "favoritesLogin": "Пожалуйста, войдите в систему, чтобы просмотреть избранное.",
+    "favoriteToggleError": "Не удалось изменить состояние избранного.",
     "required": "Поле обязательно для заполнения",
-    "validEmail": "Электронная почта должна быть действительной",
+    "validEmail": "Введите корректный адрес электронной почты",
     "requiredCategory": "Категория обязательна",
     "registrationSuccess": "Регистрация прошла успешно!"
   },
