--- a/home-service-full-stack/frontend/src/locales/ru/translation.json
+++ b/home-service-full-stack/frontend/src/locales/ru/translation.json
@@ -59,6 +59,7 @@
     "bookCancel": "Бронирование успешно отменено!",
     "pastDateError": "Вы не можете забронировать дату в прошлом.",
     "selectBookingDate": "Пожалуйста, выберите дату перед отправкой.",
+    "selectBookingTime": "Пожалуйста, выберите время.",
     "favoritesLoading": "Загрузка избранного...",
     "favoritesError": "Ошибка при загрузке избранного.",
     "favoritesLogin": "Пожалуйста, войдите в систему, чтобы просмотреть избранное.",
