--- a/home-service-full-stack/frontend/src/locales/ru/translation.json
+++ b/home-service-full-stack/frontend/src/locales/ru/translation.json
@@ -46,7 +46,8 @@
     "registerNow": "Зарегистрироваться сейчас",
     "loginOrSign": "Войти / Зарегистрироваться",
     "login": "Войти",
-    "cancel": "Отмена"
+    "cancel": "Отмена",
+    "update": "Обновить"
   },
   "messages": {
     "emailSendSuccess": "Письмо успешно отправлено!",
@@ -67,7 +68,9 @@
     "required": "Поле обязательно для заполнения",
     "validEmail": "Введите корректный адрес электронной почты",
     "requiredCategory": "Категория обязательна",
-    "registrationSuccess": "Регистрация прошла успешно!"
+    "registrationSuccess": "Регистрация прошла успешно!",
+    "updateSuccess": "Ваш аккаунт был успешно обновлён!",
+    "updateError": "Произошла ошибка при обновлении аккаунта. Пожалуйста, попробуйте снова."
   },
   "inputPlaceholder": {
     "search": "Начните вводить название услуги, которую вы ищете...",
@@ -92,6 +95,12 @@
       "loginTitle": "Вход",
       "sign": "Нет аккаунта? Зарегистрируйтесь",
       "login": "Уже есть аккаунт? Войдите"
+    },
+    "updateAccount": {
+      "surname": "Фамилия",
+      "age": "Возраст",
+      "country": "Страна",
+      "city": "Город"
     }
   },
   "aboutUs": {
