added input for the photo change

--- a/home-service-full-stack/frontend/src/locales/en/translation.json
+++ b/home-service-full-stack/frontend/src/locales/en/translation.json
@@ -100,7 +100,8 @@
       "surname": "Surname",
       "age": "Age",
       "country": "Country",
-      "city": "City"
+      "city": "City",
+      "photo": "Photo"
     }
   },
   "aboutUs": {
