--- a/home-service-full-stack/frontend/src/locales/lt/translation.json
+++ b/home-service-full-stack/frontend/src/locales/lt/translation.json
@@ -100,7 +100,8 @@
       "surname": "Pavardė",
       "age": "Amžius",
       "country": "Šalis",
-      "city": "Miestas"
+      "city": "Miestas",
+      "photo": "Nuotrauka"
     }
   },
   "aboutUs": {
