--- a/home-service-full-stack/frontend/src/locales/ru/translation.json
+++ b/home-service-full-stack/frontend/src/locales/ru/translation.json
@@ -100,7 +100,8 @@
       "surname": "Фамилия",
       "age": "Возраст",
       "country": "Страна",
-      "city": "Город"
+      "city": "Город",
+      "photo": "Фотография"
     }
   },
   "aboutUs": {
