added for the register form 'repeat password' input and visability to the password

--- a/home-service-full-stack/frontend/src/locales/en/translation.json
+++ b/home-service-full-stack/frontend/src/locales/en/translation.json
@@ -94,7 +94,8 @@
     "loginAndRegister": {
       "loginTitle": "Login",
       "sign": "Don't have an account? Sign up",
-      "login": "Already have an account? Log in"
+      "login": "Already have an account? Log in",
+      "passwordRepeat": "Repeat password"
     },
     "updateAccount": {
       "surname": "Surname",
