--- a/home-service-full-stack/frontend/src/locales/ru/translation.json
+++ b/home-service-full-stack/frontend/src/locales/ru/translation.json
@@ -94,7 +94,8 @@
     "loginAndRegister": {
       "loginTitle": "Вход",
       "sign": "Нет аккаунта? Зарегистрируйтесь",
-      "login": "Уже есть аккаунт? Войдите"
+      "login": "Уже есть аккаунт? Войдите",
+      "passwordRepeat": "Повторите пароль"
     },
     "updateAccount": {
       "surname": "Фамилия",
